state/createRef les3

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
-.App {
+/* .App {
 
-}
+} */
 .filter-active {
     background-color: rgb(251, 255, 0);
 }
@@ -14,6 +14,6 @@
   padding: 10px;
 }
 
-.todoList-task {
+/* .todoList-task {
 
-}
+} */
