--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,13 @@
 .todoList > div {
   padding: 10px;
 }
+.error {
+  border-color: red;
+}
 
-/* .todoList-task {
+.todoList-task {
 
-} */
+} 
+.done {
+  opacity: 0.5;
+ }
